キーワード検索 　　入力キーワード提示の変更 　　2018年４月対応内容の削除

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <!-- Video -->
 
     <!-- Search -->
+        <string name="keyword_search_title">キーワード検索</string>
         <string name="keyword_search_hint">検索するキーワードを入力</string>
         <string name="keyword_search_history">履歴</string>
         <string-array name="tab_names">
