--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -40,6 +40,11 @@
     <string name="weekly_tv_ranking_title">週刊テレビランキング</string>
     <string name="video_ranking_title">ビデオランキング</string>
 
+    <!-- Home -->
+    <string name="home_label_recommend_program">おすすめ番組</string>
+    <string name="home_label_recommend_video">おすすめビデオ</string>
+    <string name="home_label_now_on_air">NOW ON AIR</string>
+
     <!-- Other -->
 
     <!-- Player -->
