DREM-286 [DREM-25]レコメンド一覧(未契約状態、実装) UI実装
UI実装
・フラグメント：実装済み
・取得データ表示：着手中
・ページング：実装済み
・リクエスト処理：実装済み

データプロバイダ
・コールバック処理：実装見直し中
・サーバ通信リクエスト：実装見直し中

データマネージャ
・レスポンス処理：着手中
・DB（キャッシュ）：着手中

UIのフラグメント部分のみ動作確認済み

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -16,6 +16,14 @@
 
     <!-- Home -->
     <string name="now_on_air_list">NOW ON AIR</string>
+    <string name="recommend_list_title">おすすめ番組・ビデオ</string>
+    <string-array name="recommend_list_tab_names">
+        <item>テレビ</item>
+        <item>ビデオ</item>
+        <item>dTVチャンネル</item>
+        <item>dTV</item>
+        <item>dアニメ</item>
+    </string-array>
 
     <!-- TvProgram -->
 
