GlobalMenuに「視聴中ビデオ」を追加

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -80,6 +80,7 @@
     <string name="nav_menu_item_ranking">ランキング</string>
     <string name="nav_menu_item_clip">クリップ</string>
     <string name="nav_menu_item_purchased_video">購入済みビデオ</string>
+    <string name="nav_menu_item_watch_listen_video">視聴中ビデオ</string>
     <string name="nav_menu_item_record_reserve">録画予約</string>
     <string name="nav_menu_item_video">ビデオ</string>
     <string name="nav_menu_item_keyword_search">キーワードで探す</string>
