DREM-265  [DREM-47-2]週間テレビランキング
UI実装
・UIレイアウト：実装済み
・データ表示：着手中
DP実装
・リクエスト：着手中
・レスポンス：着手中

Change-Id: I2e455f85bcf32064e9ee9b3d2b5f89ab782c9572

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -59,6 +59,12 @@
     <string name="daily_tv_ranking_title">今日のテレビランキング</string>
     <string name="weekly_tv_ranking_title">週間テレビランキング</string>
     <string name="video_ranking_title">ビデオランキング</string>
+    <string-array name="ranking_tab_names">
+        <item>総合</item>
+        <item>海外映画</item>
+        <item>国内映画</item>
+        <item>海外TV番組・ドラマ</item>
+    </string-array>
 
     <!-- Home -->
     <string name="home_label_recommend_program">おすすめ番組</string>
