--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -59,6 +59,7 @@
     <string name="daily_tv_ranking_title">今日のテレビランキング</string>
     <string name="weekly_tv_ranking_title">週間テレビランキング</string>
     <string name="video_ranking_title">ビデオランキング</string>
+    <string name="common_ranking_enter">\n</string>
     <string-array name="ranking_tab_names">
         <item>総合</item>
         <item>海外映画</item>
