DREM-410 ([DREM-6]レンタル一覧) 実装（UI）
レンタル一覧のUI部分を実装(ダミーデータによる画面表示のみ)

Change-Id: I0c9f8f9546734fabc8b36e12cb00936d43422e4d

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -59,6 +59,7 @@
     <string name="daily_tv_ranking_title">今日のテレビランキング</string>
     <string name="weekly_tv_ranking_title">週間テレビランキング</string>
     <string name="video_ranking_title">ビデオランキング</string>
+    <string name="common_ranking_enter">\n</string>
 
     <!-- Home -->
     <string name="home_label_recommend_program">おすすめ番組</string>
@@ -93,4 +94,6 @@
         <string name="search_loading">loading...</string>
     <!--  検索画面 End  -->
 
+    <!-- レンタル -->
+    <string name="rental_title">レンタル</string>
 </resources>
