DREM-475  ([DREM-24]録画予約一覧) 実装(UI,DP,DM)
実装クラス・メソッド・レイアウト・TODO定義

Change-Id: Iff0a457a988e3ba534f1045e95fb790437cbdaef

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
         <item>dTV</item>
         <item>dアニメ</item>
     </string-array>
+    <string name="recording_reservation_list_title">録画予約</string>
 
     <!-- クリップ一覧 -->
     <string name="str_clip_activity_title">クリップ</string>
