--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -1,7 +1,13 @@
+<!--
+  ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
+  -->
+
 <resources>
 
     <!-- Common -->
     <string name="app_name">dTVTerminalApp</string>
+    <string name="back_key">く</string>
+    <string name="close_key">×</string>
 
     <!-- Launch -->
     <string name="str_launch_title">起動画面</string>
