--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_name">dTVTerminalApp</string>
     <string name="back_key">く</string>
     <string name="close_key">×</string>
+    <string name="list_transition">＞</string>
 
     <!-- Launch -->
     <string name="str_launch_title">起動画面</string>
@@ -47,6 +48,8 @@
     <!-- TvProgram -->
 
     <!-- Video -->
+    <string name="video_content_top_title">ビデオ</string>
+    <string name="video_content_sub_genre_title">全ての作品</string>
 
     <!-- Search -->
     <string name="keyword_search_title">キーワード検索</string>
