[DREM-8]ビデオ一覧 実装(UI,DP,DM)
コンテンツ詳細用画面レイアウトファイル作成

Change-Id: I2539883570d548d15a231a746fe61ad716f24a85

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -112,4 +112,8 @@
 
     <!-- レンタル -->
     <string name="rental_title">レンタル</string>
+
+    <!--コンテンツ詳細-->
+    <string name="contents_info_text">作品情報</string>
+    <string name="contents_info_more_text">more</string>
 </resources>
