[DREM-11]コンテンツ詳細画面(他サービス、画面表示)
ページャタブ部分のデータ準備

Change-Id: Iff5c3809b30ad8a514e03f0e332ac9bb22e15e43

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -116,4 +116,7 @@
     <!--コンテンツ詳細-->
     <string name="contents_info_text">作品情報</string>
     <string name="contents_info_more_text">more</string>
+    <string-array name="other_contents_detail_tabs">
+        <item>作品情報</item>
+    </string-array>
 </resources>
