--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -117,6 +117,7 @@
     <!--コンテンツ詳細-->
     <string name="contents_info_text">作品情報</string>
     <string name="contents_info_more_text">more</string>
+    <string name="contents_info_thumbnail_text">コンテンツ詳細のサムネイル画像</string>
     <string-array name="other_contents_detail_tabs">
         <item>作品情報</item>
     </string-array>
