--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -121,7 +121,9 @@
     <string name="d_animation_contents_service_name">dアニメ</string>
     <string name="dtv_channel_contents_service_name">dTVチャンネル</string>
     <string name="hikari_tv_contents_service_name">ひかりTV</string>
+    <string name="contents_viewing_text">で視聴する</string>
     <string name="contents_info_thumbnail_text">コンテンツ詳細のサムネイル画像</string>
+    <string name="contents_info_thumbnail_button">コンテンツ詳細のサムネイル画像上のボタン</string>
     <string-array name="other_contents_detail_tabs">
         <item>作品情報</item>
     </string-array>
