DREM-28 ロジックソースを追加する
Change-Id: Ide1c8a321b8651adc50a742da0b1e286229753af

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -38,7 +38,12 @@
     <string name="str_watching_video_activity_title">視聴中ビデオ一覧</string>
 
     <!-- TvProgram -->
-
+    <string-array name="tv_program_list_tab_names">
+        <item>MY番組表</item>
+        <item>ひかり</item>
+        <item>dTVチャンネル</item>
+    </string-array>
+    <string name="tv_program_change_mode">&lt; &gt;</string>
     <!-- Video -->
 
     <!-- Search -->
