--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -81,6 +81,9 @@
         <item>海外TV番組・ドラマ</item>
     </string-array>
 
+    <string name="tv_icon_description">テレビアイコン</string>
+    <string name="menu_icon_description">メニューアイコン</string>
+
     <!-- Home -->
     <string name="home_label_recommend_program">おすすめ番組</string>
     <string name="home_label_recommend_video">おすすめビデオ</string>
