DREM-8 ビデオ一覧 実装(UI,DP,DM) ・レイアウト修正 ・WebApiから情報を取得 ・Activityに送るデータの生成 ・受け取った情報の画面表示
Change-Id: I3e68d3b86d90547e8a8344af1e967b198578f5da

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="app_name">dTVTerminalApp</string>
     <string name="back_key">く</string>
     <string name="close_key">×</string>
-    <string name="list_transition">＞</string>
+    <string name="list_transition">></string>
 
     <!-- Launch -->
     <string name="str_launch_title">起動画面</string>
