DREM-677 ([DREM-3]録画一覧画面(情報表示) ) 調査(UI,DP,DM) 対応内容：プッシュ失敗によりコミットしなおします。マージの為、進捗を一旦コミットします。 担当者：日野
Change-Id: I68c665be7689bd4323f1784fbc0a4e54ffc06069

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="back_key">く</string>
     <string name="close_key">×</string>
     <string name="list_transition">></string>
+    <string name="contents_hyphen">-</string>
 
     <!-- Launch -->
     <string name="str_launch_title">起動画面</string>
@@ -54,6 +55,12 @@
         <item>MY番組表</item>
         <item>ひかり</item>
         <item>dTVチャンネル</item>
+    </string-array>
+
+    <!-- 録画番組 -->
+    <string-array name="record_list_tab_names">
+        <item>すべて</item>
+        <item>持ち出し</item>
     </string-array>
     <string name="tv_program_change_mode">&lt; &gt;</string>
     <!-- Video -->
