DREM-633 ([DREM-32]ペアリング（UI、DP、DM）) 実装(UI)
DREM-759対応
30秒タイムアウトを実装
無駄な処理を削除
リスナー登録、削除処理の実装

Change-Id: I1b32eae51225a296576ac324b465d56a4e4c6e91

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -26,6 +26,8 @@
     <string name="str_d_account_resetting_title">dアカウント再設定</string>
     <string name="str_d_account_setting_help_title">dアカウント設定ヘルプ</string>
     <string name="str_d_account_reg_confirmation_title">dアカウント登録確認</string>
+    <string name="str_stb_select_result_text_failed">ドコモテレビターミナルがネットワークに接続されていないか、\nドコモテレビターミナルのバージョンアップが必要です</string>
+    <string name="str_stb_select_result_text_search">STB検索中</string>
 
     <!-- Home -->
     <string name="now_on_air_list">NOW ON AIR</string>
