([DREM-8]ビデオ一覧)ビデオ一覧API実装変更
取得したデータが1ジャンルに紐づくサブジャンルしか存在しないときの処理を追加

Change-Id: I9b8f67e2a856c62230ccfcd972952a9b39f90b34

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -65,6 +65,7 @@
     <string name="tv_program_change_mode">&lt; &gt;</string>
     <!-- Video -->
     <string name="video_content_top_title">ビデオ</string>
+    <string name="video_content_all_title">すべて</string>
     <string name="video_content_sub_genre_title">全ての作品</string>
 
     <!-- Search -->
