--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="str_stb_connect_success_text">STBとペアリングしました</string>
     <string name="str_stb_pair_invitation_title">STBペアリング勧誘</string>
     <string name="str_stb_no_pair_use_text">ペアリングしないでアプリを利用する</string>
-    <string name="str_stb_pair_invitation_text">dリモートアプリは、STBとのペアリングによって\nご利用いただきます。</string>
+    <string name="str_stb_pair_invitation_text">dリモートアプリは、STBとのペアリングによって\nご利用いただけます。</string>
     <string name="str_d_account_setting_title">dアカウントアプリ誘導</string>
     <string name="str_d_account_resetting_title">dアカウント再設定</string>
     <string name="str_d_account_setting_help_title">dアカウント設定ヘルプ</string>
