--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -55,6 +55,14 @@
         <!-- <item>人物</item> -->
     </string-array>
 
+    <!-- チャンネルリスト -->
+    <string-array name="channel_list_tab_names">
+        <item>ひかりTV</item>
+        <item>地上波</item>
+        <item>BS</item>
+        <item>dTVチャンネル</item>
+    </string-array>
+
     <!-- WatchingVideoActivity -->
     <string name="str_watching_video_activity_title">視聴中ビデオ一覧</string>
 
