--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -125,6 +125,8 @@
     <string name="nav_menu_item_staff_recommend">スタッフおすすめ</string>
     <string name="nav_menu_item_ranking">ランキング</string>
     <string name="nav_menu_item_clip">クリップ</string>
+    <string name="nav_menu_item_tv_clip">クリップ(テレビ)</string>
+    <string name="nav_menu_item_vod_clip">クリップ(ビデオ)</string>
     <string name="nav_menu_item_purchased_video">購入済みビデオ</string>
     <string name="nav_menu_item_watch_listen_video">視聴中ビデオ</string>
     <string name="nav_menu_item_record_reserve">録画予約</string>
