--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="close_key">×</string>
     <string name="list_transition">></string>
     <string name="contents_hyphen">-</string>
+    <string name="contents_more">more</string>
 
     <!-- Launch -->
     <string name="str_app_title">dリモート</string>
@@ -95,6 +96,7 @@
     <string name="weekly_tv_ranking_title">週間テレビランキング</string>
     <string name="video_ranking_title">ビデオランキング</string>
     <string name="common_ranking_enter">\n</string>
+    <string name="contents_header">　></string>
     <string-array name="ranking_tab_names">
         <item>総合</item>
         <item>海外映画</item>
