[DREM-10-4]プレイヤー画面(UI横画面))実装
コンテンツ詳細(他サービス)の時に、タブを一つにする処理を追加した

Change-Id: I044156fe181dd46d8dfec0f8659d014d282ce099

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -165,6 +165,9 @@
     <string name="contents_detail_tv_staff">キャスト・スタッフ</string>
     <string name="contents_detail_tv_staff_recommend">おすすめ作品</string>
     <string name="contents_detail_tv_label">|</string>
+    <string-array name="other_service_contents_detail_tabs">
+        <item>作品情報</item>
+    </string-array>
     <string-array name="other_contents_detail_tabs">
         <item>番組詳細</item>
         <item>チャンネル</item>
