DREM-8 チャンネルリストUI調整
Change-Id: Ibae8d861e29d546302eac25f019e3d458663cddf

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -210,4 +210,7 @@
         <item>エピッド・ボレアナズ</item>
         <item>ミカエラ・コンリン</item>
     </string-array>
+
+    <!-- チャンネルリストタイトル -->
+    <string name="channel_list_activity_title">チャンネルリスト</string>
 </resources>
