[DREM-2-2]グローバルメニュー最新仕様反映)調査・実装
契約・ペアリング済みメニュー全項目実装

Change-Id: I1d641b7473b012e461507281cc3707661bdf5c67

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -176,12 +176,12 @@
     <string name="nav_menu_item_keyword_search">キーワードで探す</string>
     <string name="nav_menu_item_notice">お知らせ</string>
     <string name="nav_menu_item_setting">設定</string>
-    <string name="nav_menu_item_hikari_tv_none_action">ひかりＴＶ </string>
+    <string name="nav_menu_item_hikari_tv_none_action">ひかりＴＶ　</string>
     <string name="nav_menu_item_hikari_tv">ひかりＴＶ</string>
     <string name="nav_menu_item_dtv_channel">dTVチャンネル</string>
     <string name="nav_menu_item_dtv">dTV</string>
     <string name="nav_menu_item_d_animation">dアニメ</string>
-    <string name="nav_menu_item_dazn">DAZN</string>
+    <string name="nav_menu_item_dazn">ダ・ゾーン</string>
     <string name="nav_menu_item_premium_video">プレミアムビデオ</string>
     <string name="nav_menu_item_premium_tv_app_start_common">テレビアプリを起動する</string>
     <!-- MenuDisplay End -->
