DREM-937[実装] ([DREM-51]設定TOP画面) 実装　RuntimePermission不許可時のダイアログが絡むとチェックボックスが二重に表示されるケースが存在したため修正
Dアカウント存在判定処理を共通化
EXTERNAL_STORAGEに対するRuntimePermission対応、および任意のRuntimePermissionの確認処理を共通化
Android4.4環境にてCheckBoxの色が変化していなかったため、画像を使う表示方法に変更
設定画面の">"の画像を大きいものに差し替え

Change-Id: I9f2cdfc9a9fb6ad302e761ae34670f7f65705ac3

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -239,6 +239,7 @@
     <string name="main_setting_storage_status">storage</string>
     <string name="main_setting_device_storage">本体ストレージ</string>
     <string name="main_setting_outside_storage">SDカード</string>
+    <string name="main_setting_no_permission">SDカードへのアクセスが許可されていませんので、ダウンロード先は本体ストレージのままとなります。</string>
     <string name="main_setting_image_quality_low">標準画質</string>
     <string name="main_setting_image_quality_middle">高画質</string>
     <string name="main_setting_image_quality_high">最高画質</string>
