共通ダイアログ
共通ダイアログ追加

Change-Id: I78d01a4281b2ab715c6554f6d7670a7c90787d97

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="contents_more">more</string>
     <string name="positive_response">はい</string>
     <string name="negative_response">いいえ</string>
+    <string name="custom_dialog_ok">確定</string>
+    <string name="custom_dialog_cancel">キャンセル</string>
 
     <!-- Launch -->
     <string name="str_app_title">dリモート</string>
