--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -217,6 +217,8 @@
     <string name="contents_detail_tv_staff">キャスト・スタッフ</string>
     <string name="contents_detail_tv_staff_recommend">おすすめ作品</string>
     <string name="contents_detail_tv_label">|</string>
+    <string name="dTV_content_service_start_text">dTVで視聴</string>
+    <string name="dTV_content_service_start_dialog">dTVアプリを起動します</string>
     <string-array name="other_service_contents_detail_tabs">
         <item>作品情報</item>
     </string-array>
