--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="str_d_account_reg_confirmation_title">dアカウント登録確認</string>
     <string name="str_stb_select_result_text_failed">ドコモテレビターミナルがネットワークに接続されていないか、\nドコモテレビターミナルのバージョンアップが必要です</string>
     <string name="str_stb_select_result_text_search">STB検索中</string>
-    
+
     <!-- リモコン-->
     <string name="remote_controller_viewpager_record_list_button">録画リスト</string>
     <string name="remote_controller_viewpager_program_list_button">番組表</string>
@@ -226,6 +226,11 @@
         <item>エミリー・デシャンネル</item>
         <item>エピッド・ボレアナズ</item>
         <item>ミカエラ・コンリン</item>
+    </string-array>
+    <string name="recordiong_reservation_menu_dialog_title">録画予約しますか？</string>
+    <string-array name="recording_reservation_menu_dialog_item">
+        <item>録画予約する</item>
+        <item>キャンセル</item>
     </string-array>
 
     <!-- チャンネルリストタイトル -->
