--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -220,4 +220,12 @@
 
     <!-- チャンネルリストタイトル -->
     <string name="channel_list_activity_title">チャンネルリスト</string>
+
+    <!-- MY番組表設定 -->
+    <string name="my_channel_list_setting">マイ番組表設定</string>
+    <string name="my_channel_list_setting_failed_dialog_title">エラー</string>
+    <string name="my_channel_list_setting_failed_dialog_content_register">登録失敗!</string>
+    <string name="my_channel_list_setting_failed_dialog_content_unregister">解除失敗!</string>
+    <string name="my_channel_list_setting_dialog_title_unregister">確認!</string>
+    <string name="my_channel_list_setting_dialog_content_unregister">本当削除しますか?</string>
 </resources>
