--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -238,6 +238,17 @@
         <item>録画予約する</item>
         <item>キャンセル</item>
     </string-array>
+    <string name="recording_reservation_complete_dialog_title">録画予約完了</string>
+    <string name="recording_reservation_complete_dialog_msg">録画予約依頼を受け付けました。\n録画予約一覧を表示しますか？</string>
+    <string name="recording_reservation_complete_dialog_confirm">表示する</string>
+    <string name="recording_reservation_complete_dialog_cancel">表示しない</string>
+    <string name="recording_reservation_failed_dialog_msg">録画予約失敗しました。</string>
+    <string name="recording_reservation_failed_dialog_confirm">OK</string>
+    <string name="recording_reservation_failed_dialog_token">トークン不一致</string>
+    <string name="recording_reservation_failed_dialog_other">その他の異常</string>
+    <string name="recording_reservation_failed_dialog_param">リクエストパラメータ不正</string>
+    <string name="recording_reservation_failed_dialog_over">登録件数超過</string>
+    <string name="recording_reservation_failed_dialog_no_agreement">未契約エラー</string>
 
     <!-- チャンネルリストタイトル -->
     <string name="channel_list_activity_title">チャンネルリスト</string>
