DREM-959 [実装]([DREM-14]dアカウント設定アプリ連携)実装・実装レビュー
　dアカウント設定アプリ連携処理が、アプリの起動時一通り行われるようにしました。

Change-Id: I6f51613771cd4ef8ba9a1001015bfa9d41492493

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -287,4 +287,8 @@
         <item>プライバシーポリシー(TBD)</item>
         <item>利用規約(TBD)</item>
     </string-array>
+
+    <!-- dアカウント登録 -->
+    <string name="d_account_regist_error">dアカウントが取得できませんでした</string>
+
 </resources>
