--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -270,4 +270,7 @@
         <item>利用規約(TBD)</item>
     </string-array>
 
+    <!-- dアカウント登録 -->
+    <string name="d_account_regist_error">dアカウントが取得できませんでした</string>
+
 </resources>
