DREM-959 [実装]([DREM-14]dアカウント設定アプリ連携)実装・実装レビュー
ミーティングで発覚した、dアカウント登録アプリ連携時にdアカウントが未登録の場合、登録画面への自動遷移処理の削除等の修正を行いました。

Change-Id: Ic2a9451ce8519f6b8e53a9029bdc9718205fadac

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -289,6 +289,7 @@
     </string-array>
 
     <!-- dアカウント登録 -->
-    <string name="d_account_regist_error">dアカウントが取得できませんでした</string>
+    <string name="d_account_regist_error">dアカウントの処理に失敗しました。</string>
+    <string name="d_account_chamge_message">dアカウントが変更されました。初期画面に戻ります。</string>
 
 </resources>
