--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -297,6 +297,7 @@
     <string name="my_channel_list_setting_dialog_content_unregister">本当削除しますか?</string>
 
     <!-- dアカウント登録 -->
-    <string name="d_account_regist_error">dアカウントが取得できませんでした</string>
+    <string name="d_account_regist_error">dアカウントの処理に失敗しました。</string>
+    <string name="d_account_chamge_message">dアカウントが変更されました。初期画面に戻ります。</string>
 
 </resources>
