[レビュー]([DREM-10-6]コンテンツ詳細画面(録画予約))[DREM-10-6]コンテンツ詳細画面(録画予約) 実装レビュー/不具合修正/動作確認
録画実行確認ダイアログえを実装

Change-Id: Id11272b97b61fa4616544c2f7e727aa9006ef09c

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -253,6 +253,10 @@
     <string name="recording_reservation_failed_dialog_param">リクエストパラメータ不正</string>
     <string name="recording_reservation_failed_dialog_over">登録件数超過</string>
     <string name="recording_reservation_failed_dialog_no_agreement">未契約エラー</string>
+    <string name="recording_reservation_confirm_dialog_title">録画予約確認</string>
+    <string name="recording_reservation_confirm_dialog_msg">この番組を録画予約します。\n宜しいでしょうか？</string>
+    <string name="recording_reservation_confirm_dialog_confirm">録画予約する</string>
+    <string name="recording_reservation_confirm_dialog_cancel">録画予約しない</string>
 
     <!-- チャンネルリストタイトル -->
     <string name="channel_list_activity_title">チャンネルリスト</string>
