--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="str_d_account_resetting_title">dアカウント再設定</string>
     <string name="str_d_account_setting_help_title">dアカウント設定ヘルプ</string>
     <string name="str_d_account_reg_confirmation_title">dアカウント登録確認</string>
-    <string name="str_stb_select_result_text_failed">ドコモテレビターミナルがネットワークに接続されていないか、\nドコモテレビターミナルのバージョンアップが必要です</string>
+    <string name="str_stb_select_result_text_failed">ドコモテレビターミナルがネットワークに\n接続されていないか、ドコモテレビターミナルの\nバージョンアップが必要です。</string>
     <string name="str_stb_select_result_text_search">STB検索中</string>
     
     <!-- リモコン-->
