[レビュー][DREM-10-6]コンテンツ詳細画面(録画予約) 実装レビュー/不具合修正/動作確認
実装修正
・録画完了ダイアログの画面遷移処理を削除
・録画予約アイコンのサイズ・マージン修正

Change-Id: Iedb911bfa600328e2924c7d433a1c652248e125b

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -243,7 +243,8 @@
         <item>キャンセル</item>
     </string-array>
     <string name="recording_reservation_complete_dialog_title">録画予約完了</string>
-    <string name="recording_reservation_complete_dialog_msg">録画予約依頼を受け付けました。\n録画予約一覧を表示しますか？</string>
+    <string name="recording_reservation_complete_dialog_msg">録画予約依頼を受け付けました。</string>
+    <string name="recording_reservation_complete_dialog_ok">OK</string>
     <string name="recording_reservation_complete_dialog_confirm">表示する</string>
     <string name="recording_reservation_complete_dialog_cancel">表示しない</string>
     <string name="recording_reservation_failed_dialog_msg">録画予約失敗しました。</string>
